...
                                            <constraint firstAttribute="height" constant="50" id="RgB-L7-B0d"/>
                                        </constraints>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1076"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="holiday" translatesAutoresizingMaskIntoConstraints="NO" id="mwc-KK-fzi">
                                                <rect key="frame" x="18" y="40" width="378" height="198"/>
                                                <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yh-7J-TmD">
                                <rect key="frame" x="153" y="433" width="108" height="30"/>
                                <state key="normal" title="SIGN OUT">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="Say-pV-pkc"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Account" image="icons8-user" id="eOh-i5-0rz"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="O8I-Qd-M16" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                                <rect key="frame" x="40" y="420" width="334" height="260"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rVa-qq-uOp">
                                                        <rect key="frame" x="0.0" y="0.0" width="334" height="40"/>
                                                        <constraints>
...
                                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ioy-Jv-lMj">
                                                        <rect key="frame" x="0.0" y="80" width="334" height="40"/>
                                                        <constraints>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G9v-m1-26q">
                                                        <rect key="frame" x="0.0" y="160" width="334" height="30"/>
                                                        <state key="normal" title="LOGIN">
                                                            <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" id="DWO-u1-J4a">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="uij-Nc-QBs">
                            <connections>
                                <segue destination="VUl-pp-18n" kind="unwind" unwindAction="unwindToPageWithUnwindSegue:" id="CFc-oB-Tdg"/>
...
